@@ -1,5 +1,10 @@
 Changes to the Dwimmer system. See http://dwimmer.org/
 
+
+
+    - Add --vberbose flag to feed collector and print the LOG only if --verbose
+      was used.
+
 0.29 2012.09.26
     - fix sendmail
 
@@ -12,7 +17,7 @@ Changes to the Dwimmer system. See http://dwimmer.org/
 0.27 2012.03.11
 
     - rename /change_password  to /change_my_password
-    - add new /change_password to change the password 
+    - add new /change_password to change the password
       of another user
     - fix command line adding user
     - add command line listing all the users
